--- a/styles.css
+++ b/styles.css
@@ -414,12 +414,12 @@ textarea:focus {
     .container_right h2{
         margin-top: 80px;
         margin-left: 20px;
-        font-size: 18px;
+        font-size: 24px;
         line-height: 24px;
     }
 
     .container_left img{
-        margin-top: 160px;
+        margin-top: 140px;
         width: 220px;
         height: 160px;
         z-index: -1;
@@ -428,7 +428,8 @@ textarea:focus {
     .container_right p{
         margin-left: 22px;
         font-size: 18px;
-        line-height: 24px;
+        line-height: 28px;
+        margin-top: 10px;
     }
 
     .section2_container{
@@ -473,7 +474,7 @@ textarea:focus {
         display: block;
         font-size: 12px;
         line-height: 22px;
-        width: 320px;
+        width: 400px;
         height: 48px;
         padding: 10px;
         margin: 10px 0px  5px 15px;
@@ -483,7 +484,7 @@ textarea:focus {
         display: block;
         font-size: 12px;
         line-height: 22px;
-        width: 320px;
+        width: 400px;
         height: 48px;
         padding: 10px;
         margin: 10px 0px  5px 15px;
@@ -491,7 +492,7 @@ textarea:focus {
     }
 
     .section4_container_right form button{
-        margin-left: 256px;
+        margin-left: 330px;
         width: 80px;
         height: 36px;
         font-size: 12px;
@@ -503,29 +504,58 @@ textarea:focus {
         height: 100%;
         width: 120%;
         z-index: -1;
-        transform: translateX(2px);
+        transform: translateX(1px);
     }
 
     .section4_container_left li{
         padding: 10px 5px;
-        margin-top: 16px;
-        margin-left: 28px; 
+        margin-top: 10px;
+        margin-left: 24px; 
         font-size: 12px;
         line-height: 16px;
+        margin-bottom: 20px;
     }
     
     .section4_container_left li img{
-        width: 10px;
-        height: 10px;
+        width: 12px;
+        height: 12px;
         padding-right: 10px;
     }
     
     .section4_container_left h3{
         font-size: 24px;
         line-height: 36px;
-        margin-top: 26px;
-        margin-left: 22px;
+        margin-top: 12px;
+        margin-left: 10px;
     }
-
-
+    
+    .footer_logo{
+        width: 68px;
+        height: 52px;
+    }
+    
+    .footer p{
+        position: absolute;
+        top: 60px;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 12px;
+        line-height: 18px;
+        text-align: center;
+    }
+    
+    .footer_text {
+        position: absolute;
+        top: 140px;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+    
+    .footer_mail{
+        position: absolute;
+        top: 110px;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+    
 }
